# parry-guard

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  flake.nix  justfile  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  check.yml  ci.yml  release.yaml
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  main.rs
crates/cli/tests/: cli_e2e.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  decode.rs  lib.rs  repo_db.rs  secrets.rs  substring.rs  unicode.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: client.rs  lib.rs  protocol.rs  scan_cache.rs  server.rs  transport.rs
crates/daemon/tests/: e2e.rs
crates/destructive/: Cargo.toml
crates/destructive/src/: bash.rs  commands.rs  consts.rs  lib.rs  paths.rs
crates/exfil/: Cargo.toml
crates/exfil/src/: bash.rs  interpreter.rs  lang.rs  lib.rs  obfuscation.rs  patterns.rs  util.rs
crates/hook/: Cargo.toml
crates/hook/src/: cache.rs  claude_md.rs  lib.rs  post_tool_use.rs  pre_tool_use.rs  project_audit.rs  taint.rs
crates/hook/tests/: e2e.rs
crates/ml/: Cargo.toml
crates/ml/benches/: inference.rs
crates/ml/src/: backend.rs  candle.rs  chunker.rs  lib.rs  model.rs  onnx.rs
docs/: opt-in-flow.md
e2e/: Cargo.toml
e2e/tests/: cli_e2e.rs
examples/: models.toml
nix/: hm-module.nix  onnxruntime.nix
