[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0-alpha.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/vaporif/parry"
homepage = "https://github.com/vaporif/parry"
keywords = ["prompt-injection", "security", "scanner", "llm", "claude"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
# Internal crates
parry-guard-core = { path = "crates/core", version = "0.1.0-alpha.2", default-features = false }
parry-guard-ml = { path = "crates/ml", version = "0.1.0-alpha.2", default-features = false }
parry-guard-exfil = { path = "crates/exfil", version = "0.1.0-alpha.2" }
parry-guard-daemon = { path = "crates/daemon", version = "0.1.0-alpha.2", default-features = false }
parry-guard-destructive = { path = "crates/destructive", version = "0.1.0-alpha.2" }
parry-guard-hook = { path = "crates/hook", version = "0.1.0-alpha.2", default-features = false }

# Core dependencies
eyre = "0.6"
thiserror = "2"
regex = "1"
aho-corasick = "1"
unicode-general-category = "1"
unicode-normalization = "0.1"
unicode_skeleton = "0.1"
data-encoding = "2"
percent-encoding = "2"
html-escape = "0.2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"
dirs = "6"
clap = { version = "4", features = ["derive", "env"] }

# Tree-sitter (exfil)
tree-sitter = "0.26"
tree-sitter-bash = "0.25"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"
tree-sitter-lua = "0.5"
tree-sitter-powershell = "0.26"
tree-sitter-elixir = "0.3"
tree-sitter-julia = "0.23"
tree-sitter-groovy = "0.1"
tree-sitter-scala = "0.25"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-perl = "1.1"
tree-sitter-r = "1.2"
tree-sitter-nix = "0.3"

# ML dependencies
tokenizers = { version = "0.22", default-features = false, features = [
  "fancy-regex",
] }
hf-hub = { version = "0.5", default-features = false, features = [
  "ureq",
  "rustls-tls",
] }

# ONNX backend (optional)
# TODO: unpin once ort 2.0.0-rc.13+ is released with VitisAI gating fix (pykeio/ort#546)
ort = { version = "=2.0.0-rc.11", default-features = false, features = [
  "std",
  "ndarray",
] }
ndarray = "0.17"

# Candle backend (optional)
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"

libc = "0.2"
fork = "0.7"

# Daemon/async
bytes = "1"
futures-util = { version = "0.3", default-features = false, features = [
  "sink",
] }
interprocess = { version = "2", features = ["tokio"] }
tokio = { version = "1", features = ["rt", "macros", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }

redb = "3"
blake3 = "1"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Dev dependencies
tempfile = "3"
criterion = { version = "0.8", default-features = false }

[workspace.lints.clippy]
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
