[package]
name = "parry-ai"
default-run = "parry"
description = "Prompt injection scanner CLI - substring, unicode, secrets, and ML detection"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[package.metadata.docs.rs]
features = ["onnx-fetch"]

[[bin]]
name = "parry"
path = "src/main.rs"

[dependencies]
parry-core.workspace = true
parry-ml.workspace = true
parry-daemon.workspace = true
parry-hook.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
fork.workspace = true

[features]
default = ["onnx-fetch"]
onnx = ["parry-ml/onnx", "parry-daemon/onnx", "parry-hook/onnx"]
onnx-fetch = [
  "parry-ml/onnx-fetch",
  "parry-daemon/onnx-fetch",
  "parry-hook/onnx-fetch",
]
onnx-coreml = [
  "parry-ml/onnx-coreml",
  "parry-daemon/onnx-coreml",
  "parry-hook/onnx-coreml",
]
candle = ["parry-ml/candle", "parry-daemon/candle", "parry-hook/candle"]

[lints]
workspace = true
