[package]
name = "parry-guard"
default-run = "parry-guard"
description = "Prompt injection scanner CLI - substring, unicode, secrets, and ML detection"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[package.metadata.docs.rs]
features = ["candle"]

[[bin]]
name = "parry-guard"
path = "src/main.rs"

[dependencies]
parry-guard-core.workspace = true
parry-guard-ml.workspace = true
parry-guard-daemon.workspace = true
parry-guard-hook.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
fork.workspace = true

[features]
default = ["onnx-fetch"]
onnx = ["parry-guard-ml/onnx", "parry-guard-daemon/onnx", "parry-guard-hook/onnx"]
onnx-fetch = [
  "parry-guard-ml/onnx-fetch",
  "parry-guard-daemon/onnx-fetch",
  "parry-guard-hook/onnx-fetch",
]
onnx-coreml = [
  "parry-guard-ml/onnx-coreml",
  "parry-guard-daemon/onnx-coreml",
  "parry-guard-hook/onnx-coreml",
]
candle = [
  "parry-guard-ml/candle",
  "parry-guard-daemon/candle",
  "parry-guard-hook/candle",
  "parry-guard-core/candle",
]

[lints]
workspace = true
