[package]
name = "parry-guard-exfil"
description = "AST-based code exfiltration detection using tree-sitter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
toml.workspace = true
dirs.workspace = true
tree-sitter.workspace = true
tracing.workspace = true
tree-sitter-bash.workspace = true
tree-sitter-python.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-ruby.workspace = true
tree-sitter-php.workspace = true
tree-sitter-lua.workspace = true
tree-sitter-powershell.workspace = true
tree-sitter-elixir.workspace = true
tree-sitter-julia.workspace = true
tree-sitter-groovy.workspace = true
tree-sitter-scala.workspace = true
tree-sitter-kotlin-ng.workspace = true
tree-sitter-perl.workspace = true
tree-sitter-r.workspace = true
tree-sitter-nix.workspace = true

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
