[package]
name = "parry-hook"
description = "Claude Code hook integration"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
parry-core.workspace = true
parry-destructive.workspace = true
parry-exfil.workspace = true
parry-daemon.workspace = true
blake3.workspace = true
redb.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[features]
default = ["candle"]
onnx = ["parry-daemon/onnx"]
onnx-fetch = ["parry-daemon/onnx-fetch"]
onnx-coreml = ["parry-daemon/onnx-coreml"]
candle = ["parry-daemon/candle"]

[package.metadata.docs.rs]
features = ["candle"]

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }

[lints]
workspace = true
